Bugfix for z-index when maximized

--- a/src/components/Windows.scss
+++ b/src/components/Windows.scss
@@ -51,6 +51,7 @@ $border-radius: 1rem;
       height: 100% !important;
       transform: none !important;
       border-radius: 0 !important;
+      z-index: 99999 !important;
 
       .tw-body {
         display: block !important;
